--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "Reportr",
+    "name": "Mri-Server",
     "dependencies": {
         "bootstrap": "3.1.1",
         "octicons": "2.0.2",
