--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "reportr",
-    "description": "Your life personal dashboard.",
-    "version": "3.5.1",
-    "author": "samypesse@gmail.com",
-    "homepage": "https://github.com/Reportr/dashboard",
-    "bugs": "https://github.com/Reportr/dashboard/issues",
+    "name": "mri-server",
+    "description": "Neural network monitoring",
+    "version": "0.1.0",
+    "author": "nharada@umich.edu",
+    "homepage": "https://github.com/Mri-monitoring/Mri-Server",
+    "bugs": "https://github.com/Mri-monitoring/Mri-Server/issues"
     "repository": {
         "type": "git",
-        "url": "https://github.com/Reportr/dashboard.git"
+        "url": "https://github.com/Mri-monitoring/Mri-Server"
     },
     "dependencies": {
         "lodash": "2.4.1",
