lol forgot a comma

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "name": "Mri-Server",
     "description": "Neural network monitoring",
-    "website": "https://github.com/Mri-monitoring/Mri-server"
-    "repository": "https://github.com/Mri-monitoring/Mri-server.git",
+    "website": "https://github.com/Mri-monitoring/Mri-server",
+    "repository": "https://github.com/Mri-monitoring/Mri-server",
     "logo": "https://avatars2.githubusercontent.com/u/7984166?v=2&s=200",
     "keywords": ["node", "dashboard", "analytic"],
     "addons": ["mongolab"],
